--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,6 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <!-- <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> -->
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" style="display: flex;padding: 2px;">
       {%- if site.title-logo -%}
         <img src="{{ site.title-logo | relative_url }}" class="logo_img" alt="{{ site.title | escape }}" style="width:60px;"></img>
@@ -26,8 +25,8 @@
         <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            {%- if my_page.title and my_page.permalink != "/cv/" and my_page.permalink != "/cv_ja/" -%}
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
